--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,14 @@
     "require": {
         "php": ">=5.4",
         "symfony/framework-bundle": "3.0.*",
-        "cloudinary/cloudinary_php": "1.0.11",
-		"twig/extensions": "~1.1",
-		"symfony/console": "~2.7",
-		"symfony/finder": "~2.7",
-		"satooshi/php-coveralls": "dev-master"
+        "cloudinary/cloudinary_php": "~1.3.1",
+		"twig/extensions": "~1.3.0",
+		"symfony/console": "~3.1.x-dev",
+		"symfony/finder": "~3.1.x-dev",
+		"satooshi/php-coveralls": "~2.0.x-dev"
     },
 	"require-dev": {
-		"phpunit/phpunit": "4.7.*"
+		"phpunit/phpunit": "5.3.*"
 	},
     "autoload": {
         "psr-4": {"Misteio\\CloudinaryBundle\\": ""}
