--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
         "php": ">=5.4",
         "symfony/framework-bundle": "3.0.*",
         "cloudinary/cloudinary_php": "~1.3.1",
-		"twig/extensions": "~1.3.0",
-		"symfony/console": "~3.1.x-dev",
-		"symfony/finder": "~3.1.x-dev",
-		"satooshi/php-coveralls": "~2.0.x-dev"
+	"twig/extensions": "~1.3.0",
+	"symfony/console": "3.1.x-dev",
+	"symfony/finder": "~3.1.x-dev",
+	"satooshi/php-coveralls": "~2.0.x-dev"
     },
 	"require-dev": {
 		"phpunit/phpunit": "5.3.*"
