--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "symfony/framework-bundle": "3.0.*",
         "cloudinary/cloudinary_php": "~1.3.1",
 	"twig/extensions": "~1.3.0",
-	"symfony/console": "3.1.x-dev",
+	"symfony/console": "~3.0.6",
 	"symfony/finder": "~3.1.x-dev",
 	"satooshi/php-coveralls": "~2.0.x-dev"
     },
