--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "cloudinary/cloudinary_php": "~1.3.1",
 	"twig/extensions": "~1.3.0",
 	"symfony/console": "~3.0.6",
-	"symfony/finder": "~3.1.x-dev",
-	"satooshi/php-coveralls": "~2.0.x-dev"
+	"symfony/finder": "~3.0.6",
+	"satooshi/php-coveralls": "~1.0.1"
     },
 	"require-dev": {
 		"phpunit/phpunit": "5.3.*"
